--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 * {
   box-sizing: border-box;
 }
@@ -24,7 +22,8 @@ main {
   padding: 1rem;
   margin: 10px auto;
   border-radius: 0.5rem;
-  background-color: var(--main-bg);  
+  background-color: var(--main-bg);
+  position: relative;
 }
 .todo,
 .add-todo {
@@ -44,7 +43,7 @@ input[data-finish="true"] {
   background-color: var(--finish-task-bg);
 }
 
-form  {
+form {
   text-align: right;
   font-family: "Courier New", Courier, monospace;
   font-weight: bold;
@@ -71,7 +70,6 @@ input[type="text"] {
 input[type="button"] {
   font-family: "Courier New", Courier, monospace;
   background-color: var(--btn-bg);
-  color: #000000;
   padding: 14px 20px;
   margin: 8px 0 8px 10px;
   font-weight: bold;
@@ -82,4 +80,48 @@ input[type="button"] {
 
 input[type="button"]:hover {
   background-color: var(--btn-bg-hover);
+}
+
+.info-header article {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.color-scheme-switch {
+  margin-top: 0;
+  flex: 1;
+}
+
+.color-scheme-switch label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  transition: background-color 250ms ease;
+  user-select: none;
+}
+
+.light-icon,
+.dark-icon {
+  display: none;
+}
+
+label[data-color-scheme="dark"] {
+  background-color: #000;
+}
+label[data-color-scheme="dark"] svg.dark-icon {
+  display: block;
+  fill: #fff;
+}
+label[data-color-scheme="dark"]:hover {
+  background-color: #fff;
+}
+label[data-color-scheme="dark"]:hover svg.dark-icon {
+  display: block;
+  fill: #000;
 }
