--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --dim-dark-bg: #989ec3;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -102,26 +106,35 @@ input[type="button"]:hover {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  transition: background-color 250ms ease;
   user-select: none;
+  transition: opacity 250ms ease,
+              background-color 250ms ease;
 }
+
+label[data-color-scheme]:hover {
+  background-color: var(--dim-dark-bg);
+  transition: opacity 250ms ease,
+              background-color 250ms ease;}
 
 .light-icon,
 .dark-icon {
   display: none;
+  fill: transparent;
 }
 
-label[data-color-scheme="dark"] {
-  background-color: #000;
-}
-label[data-color-scheme="dark"] svg.dark-icon {
+label[data-color-scheme="light"] .light-icon,
+label[data-color-scheme="dark"] .dark-icon  {
   display: block;
-  fill: #fff;
+  visibility: visible;
+  opacity: 1;
+  fill: black;
 }
-label[data-color-scheme="dark"]:hover {
-  background-color: #fff;
+label[data-color-scheme="dark"] .dark-icon{
+  fill: white;
 }
-label[data-color-scheme="dark"]:hover svg.dark-icon {
-  display: block;
-  fill: #000;
+label[data-color-scheme="light"] .dark-icon,
+label[data-color-scheme="dark"] .light-icon  {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
